--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,50 @@
+# Frontend
+frontend/build/
+frontend/node_modules/
+frontend/dist/
 
+# Backend
+backend/__pycache__/
+backend/**/__pycache__/
+**/__pycache__/
+backend/*.pyc
+backend/**/*.pyc
+**/*.pyc
+backend/.pytest_cache/
+backend/nas_storage/
+*.db
+*.sqlite3
+
+# Environment files
+.env
+.env.local
+.env.production
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Temporary folders
+tmp/
+temp/
