--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ sqlmodel==0.0.14
 psycopg[binary]==3.1.13
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 python-multipart==0.0.6
 alembic==1.13.1
 pydantic==2.5.0
@@ -11,3 +12,6 @@ python-dotenv==1.0.0
 aiofiles==23.2.0
 schedule==1.2.0
 Pillow==10.1.0
+pyinstaller==6.8.0
+cryptography==41.0.7
+pystray==0.19.5
