--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 frontend/build/
 frontend/node_modules/
 frontend/dist/
+frontend/dist-drive/
+frontend/dist-photos/
 
 # Backend
 backend/__pycache__/
