--- a/docker-compose.pi.yml
+++ b/docker-compose.pi.yml
@@ -12,6 +12,7 @@ services:
     environment:
       DATABASE_URL: sqlite:////data/nas_cloud.db
       NAS_STORAGE_PATH: /data/nas_storage
+      FRONTEND_DIST_ROOT: /app/frontend
       CORS_ALLOW_ALL: "true"
       TZ: ${TZ:-UTC}
     volumes:
