Updated to show drives, users and limits.

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,6 +2,11 @@
 # Use localhost for local development, or the actual backend IP when accessing from network
 VITE_BACKEND_URL=http://localhost:8000
 
+# Admin storage polling interval in milliseconds.
+# Set to 0 to disable auto-refresh.
+# 86400000 = once per day
+VITE_ADMIN_STORAGE_REFRESH_MS=86400000
+
 # On the same network? Use your backend machine IP instead:
 # VITE_BACKEND_URL=http://10.0.0.166:8000
 # Or any other device IP on your network
